Fix T44138: Crash in DataTransfer modifier when selecting a source with no loops.

Simply check and early return in case we have no source or destination items
(verts/edges/loops/polys) available...

Also, fix an assert in `BKE_mesh_calc_normals_poly()`, when called with no poly.